# KOM120H-Growspace

./: .gitignore  CMakeLists.txt  Growspace_7.docx  LICENSE  README.md  main.cpp  script.sh  setup.sh
data/: events.csv  registrations.csv  users.csv
growspace/: CMakeLists.txt  README.md  main.cpp
growspace/data/: registrations.csv
growspace/include/menus/: main_menu.h  participant_menu.h
growspace/include/utils/: csv_loader.h
include/: models.h
include/menus/: admin_menu.h  participant_menu.h
include/services/: admin_service.h  auth_service.h  participant_service.h
include/utils/: hashing.h  other.h  queue.h  stack.h
src/menus/: admin_menu.cpp  main_menu.cpp  participant_menu.cpp
src/services/: admin_service.cpp  auth_service.cpp  participant_service.cpp
src/utils/: csv_loader.cpp  hashing.cpp  other.cpp
